Jenkins with Docker changes and update to chrome driver

--- a/resources/selenium.properties
+++ b/resources/selenium.properties
@@ -1,1 +1,2 @@
-chromedriverpath=/usr/local/Caskroom/chromedriver/78.0.3904.70/chromedriver
+chromedriverpath=/usr/local/Caskroom/chromedriver/80.0.3987.16/chromedriver
+firefoxdriverpath =
